# create_multiple_charuco

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  create_charuco  main_create_charuco.cc
src/: main_create_charuco.cpp
